release/release-cluster/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: test
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "frontend-backend-config"}'
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
